Had to fix a problem with the profile nav spacing.

--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -172,7 +172,7 @@
 
   .profile-tabs-friends.highlight
     background-position: 15px -55px
-    width: 120px
+    width: 115px
 
   .profile-tabs-notes.highlight
     background-position: 15px -119px
